--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,11 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+            "styles": ["./src/assets/styles/deeppurple-amber.css",
+              "./src/assets/styles/pink-bluegrey.css",
+              "./src/assets/styles/indigo-pink.css",
+              "./src/assets/styles/purple-green.css",
+               "src/styles.scss"
             ],
             "scripts": []
           },
