--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "editor.wrappingStrategy": "advanced",
     "cSpell.words": [
         "carusel",
+        "deeppurple",
         "sidenav",
         "Warzecha"
     ]
