--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,13 +4,34 @@
 		{
 			"type": "npm",
 			"script": "start",
-			"problemMatcher": [],
-			"label": "npm: start",
-			"detail": "ng serve",
+			"isBackground": true,
+			"presentation": {
+				"focus": true,
+				"panel": "dedicated"
+			},
 			"group": {
 				"kind": "build",
 				"isDefault": true
+			},
+			"problemMatcher": {
+				"owner": "typescript",
+				"source": "ts",
+				"applyTo": "closedDocuments",
+				"fileLocation": [
+					"relative",
+					"${cwd}"
+				],
+				"pattern": "$tsc",
+				"background": {
+					"activeOnStart": true,
+					"beginsPattern": {
+						"regexp": "(.*?)"
+					},
+					"endsPattern": {
+						"regexp": "Compiled |Failed to compile."
+					}
+				}
 			}
-		}
+		},
 	]
 }
